AP-21955: Improve workflow test error messages.
Add the node message issue and type to exceptions where possible to give more detail on warnings and errors.
Add a line comparison when the expected string is more than one line.
Code cleanup in WorkflowTests.

AP-21955 (Improve error messages in workflow tests)